k8s/common/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: smart-fast-${SERVICE_NAME}
  labels:
    app: smart-fast
    service: ${SERVICE_NAME}
    managed-by: github-actions
    ai-enabled: "true"
