k8s/common/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sf-${SERVICE_NAME}
  namespace: sf-${SERVICE_NAME}
  labels:
    app: sf-${SERVICE_NAME}
    service: ${SERVICE_NAME}
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: http
      port: 80
      targetPort: ${SERVICE_PORT}  # 8000 → ${SERVICE_PORT}
      protocol: TCP
  selector:
    app: sf-${SERVICE_NAME}
